# Automatic-door-opening-system

./: CLAUDE.local.md  CLAUDE.local_template.md  CLAUDE.md  README.md  config.default.json  pyproject.toml  run_local.py
.claude/: settings.local.json
doc/phases/: 01-foundation.md  04-async-tasks.md  05-web-api.md  06-binary-logs.md  07-html-ui.md  08-hardware-boot.md
docs/: api.md  hardware.md  migraton.md  state-machine.md
docs/phases/: 01-foundation.md  02-config.md  03-state-machine.md  04-async-tasks.md  06-binary-logs.md  07-html-ui.md  08-hardware-boot.md
legacy/: README.md
src/: astro.py  compat.py  config.py  state.py
tests/: conftest.py  mock_hardware.py  test_astro.py  test_config.py  test_state.py  test_state.py.tmp
