[project]
name = "smart-kurnik-v2"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "microdot[asyncio]>=2.0.6",
    "pyright>=1.1.409",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
